# OpenGL_Boilerplate

./: .gitignore  CMakeLists.txt  README.md
Common/: shaders_utilities.cpp
Cours1/: code01_dessin.cpp
